@@ -148,7 +148,10 @@
   keypad "🅺"
   beacon "🅑"
   insert "🅘")
-(meow-setup-indicator)
+(defun +meow-setup-indicator ()
+  (when meow-global-mode
+    (meow-setup-indicator)))
+(add-hook 'meow-global-mode-hook #'+meow-setup-indicator)
 (meow-global-mode)
 
 (when (treesit-available-p)
